--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''"
+		"prepare": "svelte-kit sync || echo ''",
+		"build-webcomponent": "vite build && vite -c vite.webcomponents.config.js build"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.0.0",
